--- a/package.json
+++ b/package.json
@@ -7,49 +7,49 @@
     "createfirebaseconf": "firebase setup:web --json > ./src/firebase-config.json"
   },
   "devDependencies": {
-    "ajv": "^5.5.2",
+    "ajv": "^6.12.2",
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "babel-preset-es2015": "^6.24.1",
     "base64-inline-loader": "^1.1.1",
-    "concurrently": "^3.5.1",
-    "css-hot-loader": "^1.3.9",
-    "css-loader": "^0.28.11",
-    "cssnano": "^4.0.0-rc.2",
-    "eslint": "^4.19.1",
-    "eslint-config-google": "^0.9.1",
-    "firebase-tools": "^7.12.1",
-    "glob-all": "^3.1.0",
+    "concurrently": "^5.1.0",
+    "css-hot-loader": "^1.4.4",
+    "css-loader": "^3.5.2",
+    "cssnano": "^4.1.10",
+    "eslint": "^6.8.0",
+    "eslint-config-google": "^0.14.0",
+    "firebase-tools": "^8.1.1",
+    "glob-all": "^3.2.1",
     "html-critical-webpack-plugin": "^2.1.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.10.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.2",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "purify-css": "^1.2.5",
     "purifycss-webpack": "^0.7.0",
-    "sass-loader": "^7.0.3",
-    "string-replace-loader": "^2.1.1",
-    "style-loader": "^0.21.0",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "^4.25.1",
-    "webpack-cli": "^3.0.4",
-    "webpack-dev-server": "^3.1.10",
-    "workbox-webpack-plugin": "^3.2.0"
+    "sass-loader": "^8.0.2",
+    "string-replace-loader": "^2.3.0",
+    "style-loader": "^1.1.4",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
+    "workbox-webpack-plugin": "^5.1.2"
   },
   "dependencies": {
-    "dialog-polyfill": "^0.4.9",
-    "file-loader": "^1.1.11",
-    "firebase": "^7.7.0",
-    "firebaseui": "^4.4.0",
-    "jquery": "^3.3.1",
-    "latinize": "^0.4.0",
+    "dialog-polyfill": "^0.5.1",
+    "file-loader": "^6.0.0",
+    "firebase": "^7.14.1",
+    "firebaseui": "^4.5.0",
+    "jquery": "^3.5.0",
+    "latinize": "^0.4.1",
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.3.0",
-    "page": "^1.8.6",
-    "sweetalert": "^2.1.0",
-    "typeface-amaranth": "0.0.54",
+    "page": "^1.11.6",
+    "sweetalert": "^2.1.2",
+    "typeface-amaranth": "^0.0.72",
     "universal-ga": "^1.2.0"
   },
   "private": true
